# LoopSubdivision

./: .gitignore  CMakeLists.txt  LoopSubdivision.sln  README.md
Debug/: LoopSubdivision.ilk
LoopSubdivision/: Colore.hpp  Controller.hpp  Edge.hpp  EnvInc.hpp  Face.hpp  Graph.cpp  Graph.hpp  LoopSubdivision.vcxproj  LoopSubdivision.vcxproj.filters  Point.hpp  Summit.hpp  basicLight.fs  basicLight.vs  main.cpp
LoopSubdivision/Debug/: vc140.idb
LoopSubdivision/Debug/LoopSubdivision.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LoopSubdivision.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LoopSubdivision/x64/Debug/: vc140.idb
LoopSubdivision/x64/Debug/LoopSubdivision.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LoopSubdivision.lastbuildstate
libs/freeglut-3.0.0/: CMakeLists.txt
libs/glew-2.0.0/: CMakeLists.txt
src/: Camera.h  Controller.h  Edge.hpp  EnvInc.h  EsgiShader.cpp  EsgiShader.h  Face.h  Graph.h  Graph.hpp  Loop.h  Loop.hpp  LoopSubdivision.vcxproj  Summit.h  Summit.hpp  basic.fs  basic.vs  main.cpp
